--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,13 +32,13 @@ header a {
   margin: 0 auto;
 }
 
-/* homepage */
-.home {
+/* menu page */
+.menu {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 2fr 1fr;
   gap: 100px;
 }
-.workouts-details {
+.menus-details {
   background: #ffffff;
   border-radius: 4px;
   margin: 20px auto;
@@ -46,17 +46,17 @@ header a {
   position: relative;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
 }
-.workouts-details h4 {
+.menus-details h4 {
   margin: 0 0 10px 0;
   font-size: 1.2em;
   color: var(--primary);
 }
-.workouts-details p {
+.menus-details p {
   margin: 0;
   font-size: 0.9em;
   color: #555;
 }
-.workouts-details span {
+.menus-details span {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -122,10 +122,10 @@ nav button {
 
 /* auth forms */
 form.signup, form.login {
-  max-width: 400px;
+  width: 400px;
   margin: 40px auto;
   padding: 20px;
-  background: #fff;
+  background: #ffffff;
   border-radius: 4px;
 }
 
@@ -134,6 +134,50 @@ form.signup, form.login {
   align-items: center;
 }
 
-.material-symbols-outlined-edit {
-  margin-right: 60px; /* Adjust this margin as needed */
+/* Navbar styles for fixed positioning */
+/*.fixed-navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff; /* Customize the background color */
+  /*z-index: 1000;*/ /* Adjust the z-index as needed to ensure it's above other content */
+  /*.button-container: 0 2px 5px rgba(0, 0, 0, 0.1); /* Add a shadow for a better visual effect */
+/*}
+
+/*.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+*/
+/* Add more styles as needed */
+
+.sidebar {
+  flex: 1; /* Sidebar takes 1/3 of the available space */
+}
+
+.order {
+  flex: 2; /* Order takes 2/3 of the available space */
+}
+
+/* index.css */
+/* ... your existing styles ... */
+
+/* css sidebar*/
+.sidebar {
+  position: fixed;
+  width: 220px;
+  background-color: white;
+  height: 100%;
+}
+
+.list-item {
+  display: flex;
+  align-items: center;
+}
+
+.icon {
+  margin-right: 8px;
 }
