--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -134,26 +134,6 @@ form.signup, form.login {
   align-items: center;
 }
 
-/* Navbar styles for fixed positioning */
-/*.fixed-navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #fff; /* Customize the background color */
-  /*z-index: 1000;*/ /* Adjust the z-index as needed to ensure it's above other content */
-  /*.button-container: 0 2px 5px rgba(0, 0, 0, 0.1); /* Add a shadow for a better visual effect */
-/*}
-
-/*.container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-}
-*/
-/* Add more styles as needed */
-
 .sidebar {
   flex: 1; /* Sidebar takes 1/3 of the available space */
 }
@@ -162,22 +142,6 @@ form.signup, form.login {
   flex: 2; /* Order takes 2/3 of the available space */
 }
 
-/* index.css */
-/* ... your existing styles ... */
-
-/* css sidebar*/
-.sidebar {
-  position: fixed;
-  width: 220px;
-  background-color: white;
-  height: 100%;
-}
-
-.list-item {
+.menu-container {
   display: flex;
-  align-items: center;
-}
-
-.icon {
-  margin-right: 8px;
 }
