--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,7 +28,7 @@ header a {
 }
 .pages{
   max-width: 1400px;
-  padding: 20px;
+  padding: 0px;
   margin: 0 auto;
 }
 
@@ -61,7 +61,7 @@ header a {
   top: 20px;
   right: 20px;
   cursor: pointer;
-  background: #f1f1f1;
+  /*background: #f1f1f1;*/
   padding: 6px;
   border-radius: 50%;
   color: #333;
@@ -134,13 +134,15 @@ form.signup, form.login {
   align-items: center;
 }
 
-.sidebar {
-  flex: 1; /* Sidebar takes 1/3 of the available space */
-}
+/*.sidebar {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 1px;
+    /*flex: 1; /* Sidebar takes 1/3 of the available space */
 
-.order {
-  flex: 2; /* Order takes 2/3 of the available space */
-}
+
+/* .order {
+  flex:  90px; /* Order takes 2/3 of the available space */
 
 .menu-container {
   display: flex;
