--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,32 +1,57 @@
 /* google font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
 
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+body {
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+html,
+body,
+#root,
+#root>div {
+  height: 100%
+}
+
 /* layout */
 :root {
   --primary: #1aac83;
   --error: #e7195a;
 }
+
 body {
   background: #f7f7f7;
   margin: 0;
   font-family: "Poppins";
 }
+
 header {
   background: #fff;
 }
+
 header .container {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 10px 20px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  padding: 1rem;
+  padding-inline: 3rem;
 }
+
 header a {
   color: #333;
   text-decoration: none;
 }
-.pages{
+
+.pages {
   max-width: 1400px;
   padding: 0px;
   margin: 0 auto;
@@ -34,28 +59,39 @@ header a {
 
 /* menu page */
 .menu {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  gap: 100px;
+  display: flex;
+  width:100%;
+  row-gap: 1000px;
+  align-content: stretch;
 }
+
+.menus{
+  flex: 1;
+  padding-inline: 3rem;
+  max-width: 1400px;
+}
+
 .menus-details {
   background: #ffffff;
   border-radius: 4px;
   margin: 20px auto;
   padding: 20px;
   position: relative;
-  box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
 }
+
 .menus-details h4 {
   margin: 0 0 10px 0;
   font-size: 1.2em;
   color: var(--primary);
 }
+
 .menus-details p {
   margin: 0;
   font-size: 0.9em;
   color: #555;
 }
+
 .menus-details span {
   position: absolute;
   top: 20px;
@@ -68,9 +104,11 @@ header a {
 }
 
 /* new menu form */
-label, input {
+label,
+input {
   display: block;
 }
+
 input {
   padding: 10px;
   margin-top: 10px;
@@ -80,6 +118,7 @@ input {
   border-radius: 4px;
   box-sizing: border-box;
 }
+
 form button {
   background: var(--primary);
   border: 0;
@@ -89,6 +128,7 @@ form button {
   border-radius: 4px;
   cursor: pointer;
 }
+
 div.error {
   padding: 10px;
   background: #ffefef;
@@ -97,6 +137,7 @@ div.error {
   border-radius: 4px;
   margin: 20px 0;
 }
+
 input.error {
   border: 1px solid var(--error);
 }
@@ -106,9 +147,12 @@ nav {
   display: flex;
   align-items: center;
 }
-nav a, nav button {
+
+nav a,
+nav button {
   margin-left: 10px;
 }
+
 nav button {
   background: #fff;
   color: var(--primary);
@@ -121,7 +165,8 @@ nav button {
 }
 
 /* auth forms */
-form.signup, form.login {
+form.signup,
+form.login {
   width: 400px;
   margin: 40px auto;
   padding: 20px;
@@ -136,4 +181,27 @@ form.signup, form.login {
 
 .menu-container {
   display: flex;
+  padding-inline: 3rem;
+  padding-block: 1rem;
+  align-self: stretch;
+  /* margin-inline: auto; */
+  flex-grow: 1;
+}
+
+/* 
+Sidebar */
+.sidebar {
+  background-color: white;
+  overflow-x: hidden;
+  min-width: 300px;
+}
+
+
+/* HomePage Layout */
+.home-layout {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-grow: 1;
+  overflow:hidden
 }
