--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,6 +37,8 @@ body {
 
 header {
   background: #fff;
+  position: relative;
+  z-index: 1201;
 }
 
 header .container {
@@ -62,13 +64,13 @@ header a {
   display: flex;
   width:100%;
   row-gap: 1000px;
-  align-content: stretch;
+  justify-content: center;
 }
 
 .menus{
   flex: 1;
   padding-inline: 3rem;
-  max-width: 1400px;
+  max-width: 700px;
 }
 
 .menus-details {
